

========================== subset_data() ============================
- NEW: support for `inspect.ft` objects
- CHANGE: Rewrote help docs - especially specified by = oxygen/proportion applies to first column in multiple O2 column dataframes
- CHANGE: Warns if output subset is empty
- FIX: fix for failure with inspect() objects
- FIX: by = "proportion" and by = "o2" now work correctly with oxygen production data (changes made to truncate_data)
- Note changes above now generally result in larger/longer subsets. Extra rows are at the end (because of change in identifying where 'to' is - see comment on calc_rate)


========================== flowthrough ============================
- inspect.ft
- calc_rate.ft
- adjust_rate.ft
- convert_rate.ft

- Completely new workflow, specific to flowthough data.
- Will add more detail in vignettes. Help file is pretty complete


========================== data ============================

- CHANGE: Example data are now all data.tables
- CHANGE: flowthrough.rd amended to make delta column (i.e. rates) negative values

NEW: new example datasets
- `background_lin.rd` - linear increasing background, for testing new background correction functionality
- `background_exp.rd` - exponential increasing background, for testing new background correction functionality
- `flowthrough_mult.rd` - multiple column flowthrough data
- `flowthrough_sim.rd` - flowthrough data with increasing background recording
- `algae.rd` - oxygen production data



========================== internals ============================
New utility validation fns
- verify_by - updated - can select which 'by' inputs function accepts, or if it is required, plus output a custom message
- column.val - for inputs which take column numbers
- input.val - for other input validations


========================== S3 Methods ============================

All
- Made inputs consistent (for summary first input should be 'object', but in all others 'x', or gives CMD check error)