@@ -11,14 +11,14 @@
 #' The function can subset data based on ranges of: `"time"`, `"oxygen"`,
 #' `"row"` , or `"proportion"` of total oxygen used or produced (note, this last
 #' option works poorly with noisy or fluctuating data). For data frames, to
-#' subset by `"time"`, `"o2"`, or `"proportion"`, the time data is assumed to be in
-#' the first column, and oxygen data in the second column. For `inspect()` and
-#' `inspect.ft()` objects, the data will have been coerced to this structure
+#' subset by `"time"`, `"o2"`, or `"proportion"`, the time data is assumed to be
+#' in the first column, and oxygen data in the second column. For `inspect()`
+#' and `inspect.ft()` objects, the data will have been coerced to this structure
 #' already. In these cases the `$dataframe` element in the output is replaced by
-#' the subset, and in `inspect.ft()` the `$inputs` element is also subset
-#' and replaced. Note for `inspect.ft()` objects, the oxygen data in column 2
-#' will be either `out.o2` data or `delta.o2` data depending on what was
-#' inspected. The function can subset any data frame by `row`.
+#' the subset, and in `inspect.ft()` the `$inputs` element is also subset and
+#' replaced. Note for `inspect.ft()` objects, the oxygen data in column 2 will
+#' be either `out.o2` data or `delta.o2` data depending on what was inspected.
+#' The function can subset any data frame by `row`.
 #'
 #' When multiple columns are present, for example time in column 1, and multiple
 #' columns of oxygen data, the subset object will include *all* columns. In the
@@ -52,12 +52,18 @@
 #' is to subset the original dataframe, and process the subset through `inspect`
 #' or `inspect.ft`.
 #'
+#' A summary of the subset is printed to the console, to check it has subset the
+#' data as expected. To suppress this changing the default `quiet = FALSE` to
+#' `TRUE`.
+#'
 #' @param x `data.frame`, `inspect`, or `inspect.ft` object. The data to subset.
 #' @param from numeric. The lower bounds of the data to subset based on the
 #'   argument `by`.
 #' @param to numeric. The upper bounds of the data to subset based on the
 #'   argument `by`. is based on the argument: `by`.
 #' @param by string. `"time"`, `"row"`, `"o2"` or `"proportion"`.
+#' @param quiet logical. Controls if a summary of the output is printed to the
+#'   console. Default is `FALSE`.
 #'
 #' @export
 #'
@@ -79,7 +85,7 @@
 #' subset_data(sardine.rd, from = 94, to = 91, by = "o2") %>%
 #' auto_rate()
 
-subset_data <- function(x, from, to, by = "time") {
+subset_data <- function(x, from, to, by = "time", quiet = FALSE) {
 
   # Check if object is from respR function(s)
   if (any(class(x) %in% "inspect")) {
@@ -162,12 +168,14 @@ subset_data <- function(x, from, to, by = "time") {
     x$data <- data_sub
   }
 
-  cat("\n# subset_data # -------------------------\n")
-  cat("Original data:\n")
-  print(dt, topn = 2)
-  cat("\nSubset data:\n")
-  print(data.table(out), topn = 2)
-  cat("-----------------------------------------\n")
+  if(!quiet) {
+    cat("\n# subset_data # -------------------------\n")
+    cat("Original data:\n")
+    print(dt, topn = 2)
+    cat("\nSubset data:\n")
+    print(data.table(out), topn = 2)
+    cat("-----------------------------------------\n")
+  }
 
   # if out is empty, warn.
   # Still return in case this would break loops or whatever
